--- a/webgl2.html
+++ b/webgl2.html
@@ -10,26 +10,26 @@
    <div class="sample">
       <br />
       Cone TRIANGLES (grad), <br />
-	  Geometry <br/>
+      Geometry <br/>
       <canvas id = "cone1 heart geometry" width = "400" height = "400"  class="yellow">
          <script src="./webgl2/cone1_heart_geometry3.js"></script>
-         <script type="x-shader/x-vertex">
+         <script  type="text/glsl-shader" data-gl-type="vertex-shader">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
-			 //bool isDrawNorms;
-			 varying vec3 nm; //varying mediump
+             //bool isDrawNorms;
+             varying vec3 nm; //varying mediump
              void main()
              {
                 gl_Position = coordinates;
-				nm = inputNormal;
+                nm = inputNormal;
              }
          </script>
-         <script type="x-shader/x-fragment">
+         <script type="text/glsl-shader" data-gl-type="fragment-shader">
             precision mediump float;
             varying vec3 nm; //varying mediump
 
-			const vec4  greenColor     = vec4( 0.0,   1.0,   0.0, 1.0);
-			const vec3 lightDirection  = -normalize(vec3(-1.0,  -1.0,  -1.0));
+            const vec4  greenColor     = vec4( 0.0,   1.0,   0.0, 1.0);
+            const vec3 lightDirection  = -normalize(vec3(-1.0,  -1.0,  -1.0));
             void main()
             {
                gl_FragColor = vec4(greenColor.rgb * dot(lightDirection, normalize(nm)), 1.0);
