Triangle Fan review

--- a/webgl1.html
+++ b/webgl1.html
@@ -144,7 +144,7 @@
       Cone TRIANGLE_FAN<br/>
 	  (wrong)</br>
       <canvas id = "cone" width = "200" height = "200"  class="yellow">
-         <script src="./webgl1/cone.js"></script>
+         <script src="./webgl1/triangle_fan.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
