--- a/webgl1.html
+++ b/webgl1.html
@@ -2,7 +2,7 @@
 <head>
    <title>webgl test</title>
    <link rel="stylesheet" href="./css/default.css">
-   <script src="./glwrapper.js"></script>
+   <script src="./glcanvas.js"></script>
    <script src="./glmath.js"></script>
       
 </head>
