--- a/webgl3.html
+++ b/webgl3.html
@@ -2,7 +2,7 @@
 <head>
    <title>webgl test</title>
    <title>webgl test</title>
-   <script src="./glwrapper.js"></script>
+   <script src="./glcanvas.js"></script>
    <script src="./glmath.js"></script>
 </head>
 <body>
