Move gl files to gljs folder

--- a/webgl3.html
+++ b/webgl3.html
@@ -2,8 +2,8 @@
 <head>
    <title>webgl test</title>
    <title>webgl test</title>
-   <script src="./glcanvas.js"></script>
-   <script src="./glmath.js"></script>
+   <script src="./gljs/glcanvas.js"></script>
+   <script src="./gljs/glmath.js"></script>
 </head>
 <body>
    <div class="sample">
