--- a/webgl2.html
+++ b/webgl2.html
@@ -2,8 +2,8 @@
 <head>
    <title>webgl test</title>
    <link rel="stylesheet" href="./css/default.css">
-   <script src="./glcanvas.js"></script>
-   <script src="./glmath.js"></script>
+   <script src="./gljs/glcanvas.js"></script>
+   <script src="./gljs/glmath.js"></script>
 
 </head>
 <body>
