--- a/heightMap.html
+++ b/heightMap.html
@@ -21,8 +21,11 @@
          void main()
          {
             gl_Position = projection * view * model * vec4(vert, 1.0);
+            //gl_Position = vec4(vert, 1.0);
+            //terrainColor  =  vec4(1, 0, 0, 1);
             terrainColor  = vertColor;
             terrainNormal = norm;
+            //terrainNormal  = vec3(0.f,  1., 0.);
             lightDirection = vec3(0.f, -1., 0.);
          }
       </script>
@@ -35,9 +38,13 @@
 		 out vec4 FragColor;
          void main()
          {
-             float strength = dot(normalize(-lightDirection), normalize(terrainNormal));
+             ///float strength = dot(normalize(-lightDirection), normalize(-lightDirection));
+             float strength = dot(normalize(-lightDirection), normalize(terrainNormal)) * 1.0;//* 0.75;//1.0;//0.75;//
              FragColor = vec4( terrainColor.rgb * strength, terrainColor.a);
-         }
+             //FragColor = vec4( terrainColor.rgb * strength, terrainColor.a);
+             //FragColor = vec4(1, 0, 0, 1);
+             //FragColor = terrainColor; //vec4(1, 0, 0, 1);
+         }//
       </script>
    </canvas><br/>
    <video id="video"  height="90" width="160" src="./video/flower.mp4" autoplay muted loop  > </video>
@@ -58,6 +65,7 @@
    -->
    <script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script>
    <script src="https://webglfundamentals.org/webgl/resources/m4.js"></script>
+   <!-- script src="https://twgljs.org/dist/3.x/twgl-full.min.js"></script -->
    <script src="./gljs/api.js"></script>
    <script src="./gljs/glmath.js"></script>
    <script src="./gljs/glcanvas.js"></script>
