--- a/textureManual.html
+++ b/textureManual.html
@@ -1,6 +1,6 @@
 <canvas id="canvas"></canvas>
 
 <script src="https://webgl2fundamentals.org/webgl/resources/twgl-full.min.js"></script>
-<script src="https://webgl2fundamentals.org/webgl/resources/m4.js"></script>
+<script src="./3rdparty/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
 <script src="./texture/textureManualShaders.js"></script>
 <script src="./texture/textureManual.js"></script>
