--- a/textureManual1combined2.html
+++ b/textureManual1combined2.html
@@ -57,7 +57,7 @@
    for webgl-utils, m3, m4, and webgl-lessons-ui.
    -->
    <script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script>
-   <script src="https://webglfundamentals.org/webgl/resources/m4.js"></script>
+   <script src="./3rdparty/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
    <script src="./gljs/api.js"></script>
    <script src="./gljs/glmath.js"></script>
    <script src="./gljs/glcanvas.js"></script>
