Fix relative path error

--- a/heightMap.html
+++ b/heightMap.html
@@ -49,8 +49,8 @@
 	  <script src="./texture/heightMap.js"></script>
    </canvas><br/>
    <canvas id="HeightMapButuceniOffscreen" width="400" height = "300">
-      <script  type="text/glsl-shader" data-gl-type="vertex-shader"   data-gl-src="/texture/height-map.vs" ></script>
-      <script  type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-src="/texture/height-map.fs" ></script>
+      <script  type="text/glsl-shader" data-gl-type="vertex-shader"   data-gl-src="./texture/height-map.vs" ></script>
+      <script  type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-src="./texture/height-map.fs" ></script>
       <script src="./texture/heightMapWorker.uiproxy.js"></script>
 
    </canvas><!-- br/ -->
