Video canvas refactor

--- a/video_canvas.html
+++ b/video_canvas.html
@@ -23,6 +23,6 @@
       <canvas id="c1" width="160" height="96"></canvas>
       <canvas id="c2" width="160" height="96"></canvas>
     </div>
-    <script src="./texture/processor.js"></script>
+    <script src="./texture/video-processor.js"></script>
   </body>
 </html>
