--- a/heightMap.html
+++ b/heightMap.html
@@ -27,9 +27,9 @@
          
          void main()
          {
-            gl_Position = projection * view * model * vec4(vert, 1.0);
-            terrainColor  = vertColor;
-            terrainNormal = norm;
+            gl_Position    = projection * view * model * vec4(vert, 1.0);
+            terrainColor   = vertColor;
+            terrainNormal  = norm;
             lightDirection = vec3(0.f, -1., 0.);
          }
       </script>
@@ -51,7 +51,7 @@
    <canvas id="HeightMapButuceniOffscreen" width="400" height = "300">
       <script  type="text/glsl-shader" data-gl-type="vertex-shader"   data-gl-src="./texture/height-map.vs" ></script>
       <script  type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-src="./texture/height-map.fs" ></script>
-      <script src="./texture/heightMapWorker.uiproxy.js"></script>
+      <script src="./texture/heightMap.uiproxy.js"></script>
 
    </canvas><!-- br/ -->
 
