Added reference links to tutorials

--- a/tutorials.html
+++ b/tutorials.html
@@ -34,12 +34,19 @@
    <a href="https://webglfundamentals.org/webgl/lessons/webgl-shaders-and-glsl.html">Shaders and GLSL</a><br/>
    <a href="http://www.tinysg.de/techGuides/tg10_tessellation.html">Tesselation</a><br/>
    <a href="http://ogldev.org/www/tutorial30/tutorial30.html">Basic Tesselation</a><br/>
-   <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebGLRenderingContext/uniform">[1234]</a><br/>
+   <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebGLRenderingContext/uniform">Rendering context Uniform, mozilla org</a><br/>
    <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/Tutorial/Lighting_in_WebGL">Lighting</a><br/>
    <a href="https://stackoverflow.com/questions/47760959/how-to-pass-gl-patches">StackOverflow Question Tesselation</a><br/>
    <a href="https://stackoverflow.com/questions/33159623/how-to-implement-shadow-mapping-in-webgl">Shadow Mapping</a><br/>
    <a href="https://stackoverflow.com/questions/51428435/how-to-determine-webgl-and-glsl-version">WebGL GLSL Versions</a><br/>
    <a href="https://www.lighthouse3d.com/tutorials/glsl-tutorial/statements-and-functions/">Statements And Functions</a><br/>
+
+   <a href="https://webglfundamentals.org/webgl/lessons/webgl-3d-textures.html">texture 1, manual</a><br/>
+   <a href="https://webglfundamentals.org/webgl/lessons/webgl-boilerplate.html">WebGL Boilerplate</a><br/>
+   <a href="https://webglfundamentals.org/webgl/lessons/webgl-resizing-the-canvas.html">Resizing canvas</a><br/>
+   <a href="https://trezy.com/blog/loading-images-with-web-workers">Load Image With Web Workers</a><br/>
+   <a href="https://webglfundamentals.org/webgl/resources/webgl-utils.js">WebGL Utils JS</a>
+
 
 </body>
 </html>
